# Visualizador-3D-VSCode

./: .gitignore  CMakeLists.txt  README.md  app  config.json  run
modelos/c/: Chair.mtl
shaders/: selected_shader_model.fs  shader_model.fs
src/: Origem.cpp  camera.h  json_parser.h  objeto.h
